--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,10 @@ jobs:
 
       - run: cd CounterCI && gradle dependencies
 
-      #- save_cache:
-      #    paths:
-      #      - ~/.gradle
-      #    key: v1-dependencies-{{ checksum "build.gradle" }}
+      - save_cache:
+          paths:
+            - ~/CounterCI/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
       - run: cd CounterCI && gradle test
