--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
 
       - save_cache:
           paths:
-            - ~/CounterCI/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle" }}
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "CoumterCI/build.gradle" }}
 
       # run tests!
       - run: cd CounterCI && gradle test
