--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key: v1-dependencies-{{ checksum "CoumterCI/build.gradle" }}
+          key: v1-dependencies-{{ checksum "CounterCI/build.gradle" }}
 
       # run tests!
       - run: cd CounterCI && gradle test
