--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,9 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
-
+      #- image: circleci/openjdk:8-jdk
+      - image: danielmapar/gradle_and_node:2.0
+      
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -40,3 +41,26 @@ jobs:
 
       # run tests!
       - run: cd CounterCI && gradle test
+
+     - run: 
+          name: "Build and Publish Release on GitHub"
+          command: |
+            NOW="$(date)" 
+            ZIP_FILE_NAME=CounterCI
+            TAG=Release-$(date '+%Y-%m-%d-%H-%M-%S')
+
+            gradle jar
+
+            cd ./CounterCI/build/libs/
+            zip ${ZIP_FILE_NAME}.zip CounterCI.jar 
+
+            github-release upload --token ${GITHUB_TOKEN} --owner ${PROJECT_USERNAME} --repo ${PROJECT_REPONAME} --tag ${TAG} --name ${TAG} --body "Release date: ${NOW}" ${ZIP_FILE_NAME}.zip
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master 
