--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs:
             NOW="$(date)" 
             ZIP_FILE_NAME=CounterCI
             TAG=Release-$(date '+%Y-%m-%d-%H-%M-%S')
-
+            cd CounterCI
             gradle jar
 
-            cd ./CounterCI/build/libs/
+            cd ./build/libs/
             zip ${ZIP_FILE_NAME}.zip CounterCI.jar 
 
             github-release upload --token ${GITHUB_TOKEN} --owner ${PROJECT_USERNAME} --repo ${PROJECT_REPONAME} --tag ${TAG} --name ${TAG} --body "Release date: ${NOW}" ${ZIP_FILE_NAME}.zip
